--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Website for git</title>
 </head>
 <body>
-    <h1 style="text-align: center;">This is the website for git</h1>
+    <h1 class="red-color"style="text-align: center;">
+        This is the website for git</h1>
 
     
 </body>
